# shopify_shipsec

./: Dockerfile  NGROK_SETUP.md  alembic.ini  docker-compose.yml  get_env_values.py  init_db.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 91bc87fb146a_add_shipsec_number_to_orders.py  c50f1e5403d9_add_address_fields_to_customer_and_.py  f4b5351c08c8_add_shipsec_number_to_orders.py
src/: settings.py  utils.py
src/database/: database.py
src/models/: base_model.py  customer.py
src/routers/: customers.py  shipsec.py  vjd_api_router.py  vjd_webhook_router.py
